--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
+    "focus-trap-react": "^10.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-date-picker": "^9.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-dropdown-select": "^4.9.0",
+    "react-duration-picker": "^1.1.1",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
+    "react-select": "^5.4.0",
+    "react-time-picker": "^5.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://127.0.0.1:8000/"
 }
