--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-duration-picker": "^1.1.1",
     "react-icons": "^4.4.0",
     "react-multi-date-picker": "^3.3.4",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
