--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "date-fns": "^3.6.0",
     "focus-trap-react": "^10.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-date-picker": "^9.0.0",
-    "react-datepicker": "^4.8.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.0",
     "react-duration-picker": "^1.1.1",
